...
    rowHeight = 50
    register(TransactionsTableCell.self, forCellReuseIdentifier: TransactionsTableCell.identifier)
    register(TransactionsSectionsHeader.self, forHeaderFooterViewReuseIdentifier: TransactionsSectionsHeader.identifier)
    tableFooterView = UIView()
    self.dataSource = self
    self.delegate = self
    accessibilityIdentifier = "transactionsListTableView"
  }

  required init?(coder aDecoder: NSCoder) {
    fatalError("init(coder:) has not been implemented")
  }
}
...
