...
  private var errorBannerOffset: CGFloat?

  init() {
    super.init(nibName: nil, bundle: nil)
    title = "Transactions"
    navigationItem.backBarButtonItem = UIBarButtonItem(title: " ", style: .plain, target: nil, action: nil)
    view.accessibilityIdentifier = "transactionsListRootView"
  }

  required init?(coder aDecoder: NSCoder) {
    fatalError("init(coder:) has not been implemented")
  }

...
